default/objects/Account_Plan__c/fields/Account_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Account_Annual_Revenue__c</fullName>
    <formula>Account__r.AnnualRevenue</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>