default/objects/Account_Plan__c/fields/Account_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Account_Ownership__c</fullName>
    <formula>TEXT(Account__r.Ownership)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Ownership</label>
    <type>Text</type>
</CustomField>