default/objects/Account_Plan__c/fields/Account_Plan_Score__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Score__c</fullName>
    <formula>Intermediate_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Plan Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>