default/objects/Account_Plan__c/fields/Cell_Max_LMD__c.field-meta.xml
<CustomField>
    <fullName>Cell_Max_LMD__c</fullName>
    <description>The most recently modified date for all the Cells from the Cross Sell reports related to this plan</description>
    <inlineHelpText>Used in the account plan score - If you are not using a freeform whitespace, this value is not likely to change much</inlineHelpText>
    <label>Cross Sell Cells Max Modified Date</label>
    <summarizedField>White_Space__c.Cell_Max_LMD__c</summarizedField>
    <summaryForeignKey>White_Space__c.Account_Plan__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>