default/objects/Account_Plan__c/fields/Default_Plan_Scoring__c.field-meta.xml
<CustomField>
    <fullName>Default_Plan_Scoring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hold the value from the CRUSH Settings of Default Plan Scoring</description>
    <label>Default Plan Scoring</label>
    <type>Checkbox</type>
</CustomField>