default/objects/Account_Plan__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <label>Goal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Win</fullName>
            </value>
            <value>
                <fullName>Maintain</fullName>
            </value>
            <value>
                <fullName>Save</fullName>
            </value>
            <value>
                <fullName>Grow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>