default/objects/Account_Plan__c/fields/Intermediate_Score__c.field-meta.xml
<CustomField>
    <fullName>Intermediate_Score__c</fullName>
    <description>This field holds the score that is calculated from the Account Plan trigger</description>
    <inlineHelpText>If you want to create your own score you can save it to this field to allow it to show up in the account score component</inlineHelpText>
    <label>Intermediate Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>