default/objects/Account_Plan__c/fields/isCustomHierarchy__c.field-meta.xml
<CustomField>
    <fullName>isCustomHierarchy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCustomHierarchy</label>
    <type>Checkbox</type>
</CustomField>