default/objects/Account_Plan__c/fields/KD_Max_LMD__c.field-meta.xml
<CustomField>
    <fullName>KD_Max_LMD__c</fullName>
    <description>The most recently modified date for all the Key Dates related to this plan</description>
    <inlineHelpText>Used in the account plan score</inlineHelpText>
    <label>Key Date Max Modified Date</label>
    <summarizedField>Key_Date__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>Key_Date__c.Account_Plan__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>