default/objects/Account_Plan__c/fields/Key_Dates_Count__c.field-meta.xml
<CustomField>
    <fullName>Key_Dates_Count__c</fullName>
    <label>Key Dates Count</label>
    <summaryForeignKey>Key_Date__c.Account_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>