default/objects/Account_Plan__c/fields/Key_Stakeholder_Count__c.field-meta.xml
<CustomField>
    <fullName>Key_Stakeholder_Count__c</fullName>
    <label>Key Stakeholder Count</label>
    <summaryForeignKey>Key_Stakeholder__c.Account_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>