default/objects/Account_Plan__c/fields/KS_Max_LMD__c.field-meta.xml
<CustomField>
    <fullName>KS_Max_LMD__c</fullName>
    <description>The most recently modified date for all the Key Stakeholders related to this plan</description>
    <inlineHelpText>Used in the account plan score</inlineHelpText>
    <label>Key Stakeholder Max Modified Date</label>
    <summarizedField>Key_Stakeholder__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>Key_Stakeholder__c.Account_Plan__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>