default/objects/Account_Plan__c/fields/Objective_Max_LMD__c.field-meta.xml
<CustomField>
    <fullName>Objective_Max_LMD__c</fullName>
    <description>The most recently modified date for all the Objectives related to this plan</description>
    <inlineHelpText>Used in the account plan score</inlineHelpText>
    <label>Objective Max Modified Date</label>
    <summarizedField>Objective__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>Objective__c.Account_Plan__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>