default/objects/Account_Plan__c/fields/Objectives_Count__c.field-meta.xml
<CustomField>
    <fullName>Objectives_Count__c</fullName>
    <label>Objectives Count</label>
    <summaryForeignKey>Objective__c.Account_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>