default/objects/Account_Plan__c/fields/Opportunity_Count__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Count__c</fullName>
    <label>Opportunity Count</label>
    <summaryForeignKey>Account_Plan_Opportunity__c.Account_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>