default/objects/Account_Plan__c/fields/Opportunity_Max_LMD__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Max_LMD__c</fullName>
    <description>The most recently modified date for all the Account Plan Opportunities related to this plan</description>
    <inlineHelpText>Used in the account plan score</inlineHelpText>
    <label>Opportunity Max Modified Date</label>
    <summarizedField>Account_Plan_Opportunity__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>Account_Plan_Opportunity__c.Account_Plan__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>