default/objects/Account_Plan__c/fields/Plan_Overview__c.field-meta.xml
<CustomField>
    <fullName>Plan_Overview__c</fullName>
    <label>Plan Overview</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>