default/objects/Account_Plan__c/fields/Plan_Overview_Title__c.field-meta.xml
<CustomField>
    <fullName>Plan_Overview_Title__c</fullName>
    <label>Plan Overview Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>