default/objects/Account_Plan__c/fields/Relationship_Members_Count__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Members_Count__c</fullName>
    <label>Relationship Members Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>