default/objects/Account_Plan__c/fields/Score_KD__c.field-meta.xml
<CustomField>
    <fullName>Score_KD__c</fullName>
    <description>Value for the Key Date portion of the Account Plan Score</description>
    <formula>IF(Default_Plan_Scoring__c,
(IF( $CustomMetadata.PQ_AP_Score__mdt.Key_Dates.Score_Object__c,
CASE(1,
IF(Key_Dates_Count__c &lt; $CustomMetadata.PQ_AP_Score__mdt.Key_Dates.Count_BP_Low__c, 1, 0), 0,
IF(Key_Dates_Count__c &lt; $CustomMetadata.PQ_AP_Score__mdt.Key_Dates.Count_BP_Mid__c, 1, 0), $CustomMetadata.PQ_AP_Score__mdt.Key_Dates.Score_BP_Low__c,
IF(Key_Dates_Count__c &lt; $CustomMetadata.PQ_AP_Score__mdt.Key_Dates.Count_BP_High__c, 1, 0), $CustomMetadata.PQ_AP_Score__mdt.Key_Dates.Score_BP_Mid__c,
$CustomMetadata.PQ_AP_Score__mdt.Key_Dates.Score_BP_High__c)
*
IF( $CustomMetadata.PQ_AP_Score__mdt.Key_Dates.Use_Time_Decay__c,
CASE(1,
IF(TODAY() - DATEVALUE(KD_Max_LMD__c) &lt; $CustomMetadata.PQ_AP_Score__mdt.Key_Dates.Time_BP_Low__c, 1, 0), 1,
IF(TODAY() - DATEVALUE(KD_Max_LMD__c) &lt; $CustomMetadata.PQ_AP_Score__mdt.Key_Dates.Time_BP_Mid__c, 1, 0), $CustomMetadata.PQ_AP_Score__mdt.Key_Dates.Time_BP_Mult_Low__c,
IF(TODAY() - DATEVALUE(KD_Max_LMD__c) &lt; $CustomMetadata.PQ_AP_Score__mdt.Key_Dates.Time_BP_High__c, 1, 0), $CustomMetadata.PQ_AP_Score__mdt.Key_Dates.Time_BP_Mult_Mid__c,
$CustomMetadata.PQ_AP_Score__mdt.Key_Dates.Time_BP_Mult_High__c), 1), 0)),

(IF( Key_Dates_Count__c &gt; $CustomMetadata.PQ_AP_Score__mdt.Key_Dates.Threshold_Limit__c , $CustomMetadata.PQ_AP_Score__mdt.Key_Dates.Category_Point_Total__c, (Key_Dates_Count__c / $CustomMetadata.PQ_AP_Score__mdt.Key_Dates.Threshold_Limit__c)* $CustomMetadata.PQ_AP_Score__mdt.Key_Dates.Category_Point_Total__c))
*
IF( $CustomMetadata.PQ_AP_Score__mdt.Key_Dates.Use_Time_Decay__c,
CASE(1,
IF(TODAY() - DATEVALUE(KD_Max_LMD__c) &lt; $CustomMetadata.PQ_AP_Score__mdt.Key_Dates.Time_BP_Low__c, 1, 0), 1,
IF(TODAY() - DATEVALUE(KD_Max_LMD__c) &lt; $CustomMetadata.PQ_AP_Score__mdt.Key_Dates.Time_BP_Mid__c, 1, 0), $CustomMetadata.PQ_AP_Score__mdt.Key_Dates.Time_BP_Mult_Low__c,
IF(TODAY() - DATEVALUE(KD_Max_LMD__c) &lt; $CustomMetadata.PQ_AP_Score__mdt.Key_Dates.Time_BP_High__c, 1, 0), $CustomMetadata.PQ_AP_Score__mdt.Key_Dates.Time_BP_Mult_Mid__c,
$CustomMetadata.PQ_AP_Score__mdt.Key_Dates.Time_BP_Mult_High__c), 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>You can modify this by adjusting the custom metadata record corresponding to the Key Date Values</inlineHelpText>
    <label>Key Date Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>