default/objects/Account_Plan__c/fields/Score_KS__c.field-meta.xml
<CustomField>
    <fullName>Score_KS__c</fullName>
    <description>Value for the Key Stakeholder portion of the Account Plan Score</description>
    <formula>IF(Default_Plan_Scoring__c,
(IF( $CustomMetadata.PQ_AP_Score__mdt.Stakeholders.Score_Object__c,
CASE(1,
IF(Relationship_Members_Count__c &lt; $CustomMetadata.PQ_AP_Score__mdt.Stakeholders.Count_BP_Low__c, 1, 0), 0,
IF(Relationship_Members_Count__c &lt; $CustomMetadata.PQ_AP_Score__mdt.Stakeholders.Count_BP_Mid__c, 1, 0), $CustomMetadata.PQ_AP_Score__mdt.Stakeholders.Score_BP_Low__c,
IF(Relationship_Members_Count__c &lt; $CustomMetadata.PQ_AP_Score__mdt.Stakeholders.Count_BP_High__c, 1, 0), $CustomMetadata.PQ_AP_Score__mdt.Stakeholders.Score_BP_Mid__c,
$CustomMetadata.PQ_AP_Score__mdt.Stakeholders.Score_BP_High__c)
*
IF( $CustomMetadata.PQ_AP_Score__mdt.Stakeholders.Use_Time_Decay__c,
CASE(1,
IF(TODAY() - DATEVALUE(KS_Max_LMD__c) &lt; $CustomMetadata.PQ_AP_Score__mdt.Stakeholders.Time_BP_Low__c, 1, 0), 1,
IF(TODAY() - DATEVALUE(KS_Max_LMD__c) &lt; $CustomMetadata.PQ_AP_Score__mdt.Stakeholders.Time_BP_Mid__c, 1, 0), $CustomMetadata.PQ_AP_Score__mdt.Stakeholders.Time_BP_Mult_Low__c,
IF(TODAY() - DATEVALUE(KS_Max_LMD__c) &lt; $CustomMetadata.PQ_AP_Score__mdt.Stakeholders.Time_BP_High__c, 1, 0), $CustomMetadata.PQ_AP_Score__mdt.Stakeholders.Time_BP_Mult_Mid__c,
$CustomMetadata.PQ_AP_Score__mdt.Stakeholders.Time_BP_Mult_High__c), 1), 0)),

(IF( Relationship_Members_Count__c &gt; $CustomMetadata.PQ_AP_Score__mdt.Stakeholders.Threshold_Limit__c , $CustomMetadata.PQ_AP_Score__mdt.Stakeholders.Category_Point_Total__c, (Relationship_Members_Count__c / $CustomMetadata.PQ_AP_Score__mdt.Stakeholders.Threshold_Limit__c)* $CustomMetadata.PQ_AP_Score__mdt.Stakeholders.Category_Point_Total__c))
*
IF( $CustomMetadata.PQ_AP_Score__mdt.Stakeholders.Use_Time_Decay__c,
CASE(1,
IF(TODAY() - DATEVALUE(KS_Max_LMD__c) &lt; $CustomMetadata.PQ_AP_Score__mdt.Stakeholders.Time_BP_Low__c, 1, 0), 1,
IF(TODAY() - DATEVALUE(KS_Max_LMD__c) &lt; $CustomMetadata.PQ_AP_Score__mdt.Stakeholders.Time_BP_Mid__c, 1, 0), $CustomMetadata.PQ_AP_Score__mdt.Stakeholders.Time_BP_Mult_Low__c,
IF(TODAY() - DATEVALUE(KS_Max_LMD__c) &lt; $CustomMetadata.PQ_AP_Score__mdt.Stakeholders.Time_BP_High__c, 1, 0), $CustomMetadata.PQ_AP_Score__mdt.Stakeholders.Time_BP_Mult_Mid__c,
$CustomMetadata.PQ_AP_Score__mdt.Stakeholders.Time_BP_Mult_High__c), 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>You can modify this by adjusting the custom metadata record corresponding to the Key Stakeholder Values</inlineHelpText>
    <label>Key Stakeholder Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>