default/objects/Account_Plan__c/fields/Score_Objective__c.field-meta.xml
<CustomField>
    <fullName>Score_Objective__c</fullName>
    <description>Value for the Objective portion of the Account Plan Score</description>
    <formula>IF(Default_Plan_Scoring__c,
(IF( $CustomMetadata.PQ_AP_Score__mdt.Objective.Score_Object__c,
CASE(1,
IF(Objectives_Count__c &lt; $CustomMetadata.PQ_AP_Score__mdt.Objective.Count_BP_Low__c, 1, 0), 0,
IF(Objectives_Count__c &lt; $CustomMetadata.PQ_AP_Score__mdt.Objective.Count_BP_Mid__c, 1, 0), $CustomMetadata.PQ_AP_Score__mdt.Objective.Score_BP_Low__c,
IF(Objectives_Count__c &lt; $CustomMetadata.PQ_AP_Score__mdt.Objective.Count_BP_High__c, 1, 0), $CustomMetadata.PQ_AP_Score__mdt.Objective.Score_BP_Mid__c,
$CustomMetadata.PQ_AP_Score__mdt.Objective.Score_BP_High__c)
*
IF( $CustomMetadata.PQ_AP_Score__mdt.Objective.Use_Time_Decay__c,
CASE(1,
IF(TODAY() - DATEVALUE(Objective_Max_LMD__c) &lt; $CustomMetadata.PQ_AP_Score__mdt.Objective.Time_BP_Low__c, 1, 0), 1,
IF(TODAY() - DATEVALUE(Objective_Max_LMD__c) &lt; $CustomMetadata.PQ_AP_Score__mdt.Objective.Time_BP_Mid__c, 1, 0), $CustomMetadata.PQ_AP_Score__mdt.Objective.Time_BP_Mult_Low__c,
IF(TODAY() - DATEVALUE(Objective_Max_LMD__c) &lt; $CustomMetadata.PQ_AP_Score__mdt.Objective.Time_BP_High__c, 1, 0), $CustomMetadata.PQ_AP_Score__mdt.Objective.Time_BP_Mult_Mid__c,
$CustomMetadata.PQ_AP_Score__mdt.Objective.Time_BP_Mult_High__c), 1), 0)),

(IF( Objectives_Count__c &gt; $CustomMetadata.PQ_AP_Score__mdt.Objective.Threshold_Limit__c , $CustomMetadata.PQ_AP_Score__mdt.Objective.Category_Point_Total__c, (Objectives_Count__c / $CustomMetadata.PQ_AP_Score__mdt.Objective.Threshold_Limit__c)* $CustomMetadata.PQ_AP_Score__mdt.Objective.Category_Point_Total__c))
*
IF( $CustomMetadata.PQ_AP_Score__mdt.Objective.Use_Time_Decay__c,
CASE(1,
IF(TODAY() - DATEVALUE(Objective_Max_LMD__c) &lt; $CustomMetadata.PQ_AP_Score__mdt.Objective.Time_BP_Low__c, 1, 0), 1,
IF(TODAY() - DATEVALUE(Objective_Max_LMD__c) &lt; $CustomMetadata.PQ_AP_Score__mdt.Objective.Time_BP_Mid__c, 1, 0), $CustomMetadata.PQ_AP_Score__mdt.Objective.Time_BP_Mult_Low__c,
IF(TODAY() - DATEVALUE(Objective_Max_LMD__c) &lt; $CustomMetadata.PQ_AP_Score__mdt.Objective.Time_BP_High__c, 1, 0), $CustomMetadata.PQ_AP_Score__mdt.Objective.Time_BP_Mult_Mid__c,
$CustomMetadata.PQ_AP_Score__mdt.Objective.Time_BP_Mult_High__c), 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>You can modify this by adjusting the custom metadata record corresponding to the Objective Values</inlineHelpText>
    <label>Objective Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>