default/objects/Account_Plan__c/fields/SWOT_Count__c.field-meta.xml
<CustomField>
    <fullName>SWOT_Count__c</fullName>
    <label>SWOT Count</label>
    <summaryForeignKey>SWOT_Analysis__c.Account_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>