default/objects/Account_Plan__c/fields/SWOT_Max_LMD__c.field-meta.xml
<CustomField>
    <fullName>SWOT_Max_LMD__c</fullName>
    <description>The most recently modified date for all the SWOT records related to this plan</description>
    <inlineHelpText>Used in the account plan score</inlineHelpText>
    <label>SWOT Max Modified Date</label>
    <summarizedField>SWOT_Analysis__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>SWOT_Analysis__c.Account_Plan__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>