default/objects/Account_Plan__c/fields/TestScore__c.field-meta.xml
<CustomField>
    <fullName>TestScore__c</fullName>
    <formula>IF(Default_Plan_Scoring__c ,
(
IF( $CustomMetadata.PQ_AP_Score__mdt.SWOT.Score_Object__c,
CASE(1,
IF(SWOT_Count__c &lt; $CustomMetadata.PQ_AP_Score__mdt.SWOT.Count_BP_Low__c, 1, 0), 0,
IF(SWOT_Count__c &lt; $CustomMetadata.PQ_AP_Score__mdt.SWOT.Count_BP_Mid__c, 1, 0), $CustomMetadata.PQ_AP_Score__mdt.SWOT.Score_BP_Low__c,
IF(SWOT_Count__c &lt; $CustomMetadata.PQ_AP_Score__mdt.SWOT.Count_BP_High__c, 1, 0), $CustomMetadata.PQ_AP_Score__mdt.SWOT.Score_BP_Mid__c,
$CustomMetadata.PQ_AP_Score__mdt.SWOT.Score_BP_High__c)
*
IF( $CustomMetadata.PQ_AP_Score__mdt.SWOT.Use_Time_Decay__c,
CASE(1,
IF(TODAY() - DATEVALUE(SWOT_Max_LMD__c) &lt; $CustomMetadata.PQ_AP_Score__mdt.SWOT.Time_BP_Low__c, 1, 0), 1,
IF(TODAY() - DATEVALUE(SWOT_Max_LMD__c) &lt; $CustomMetadata.PQ_AP_Score__mdt.SWOT.Time_BP_Mid__c, 1, 0), $CustomMetadata.PQ_AP_Score__mdt.SWOT.Time_BP_Mult_Low__c,
IF(TODAY() - DATEVALUE(SWOT_Max_LMD__c) &lt; $CustomMetadata.PQ_AP_Score__mdt.SWOT.Time_BP_High__c, 1, 0), $CustomMetadata.PQ_AP_Score__mdt.SWOT.Time_BP_Mult_Mid__c,
$CustomMetadata.PQ_AP_Score__mdt.SWOT.Time_BP_Mult_High__c), 1), 0)),

(IF( SWOT_Count__c &gt; $CustomMetadata.PQ_AP_Score__mdt.SWOT.Threshold_Limit__c , $CustomMetadata.PQ_AP_Score__mdt.SWOT.Category_Point_Total__c, (SWOT_Count__c / $CustomMetadata.PQ_AP_Score__mdt.SWOT.Threshold_Limit__c)* $CustomMetadata.PQ_AP_Score__mdt.SWOT.Category_Point_Total__c))
*
IF( $CustomMetadata.PQ_AP_Score__mdt.SWOT.Use_Time_Decay__c,
CASE(1,
IF(TODAY() - DATEVALUE(SWOT_Max_LMD__c) &lt; $CustomMetadata.PQ_AP_Score__mdt.SWOT.Time_BP_Low__c, 1, 0), 1,
IF(TODAY() - DATEVALUE(SWOT_Max_LMD__c) &lt; $CustomMetadata.PQ_AP_Score__mdt.SWOT.Time_BP_Mid__c, 1, 0), $CustomMetadata.PQ_AP_Score__mdt.SWOT.Time_BP_Mult_Low__c,
IF(TODAY() - DATEVALUE(SWOT_Max_LMD__c) &lt; $CustomMetadata.PQ_AP_Score__mdt.SWOT.Time_BP_High__c, 1, 0), $CustomMetadata.PQ_AP_Score__mdt.SWOT.Time_BP_Mult_Mid__c,
$CustomMetadata.PQ_AP_Score__mdt.SWOT.Time_BP_Mult_High__c), 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TestSWOTScore</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>