default/objects/Account_Plan__c/fields/White_Space_Cell_Count__c.field-meta.xml
<CustomField>
    <fullName>White_Space_Cell_Count__c</fullName>
    <label>White Space Cell Count</label>
    <summarizedField>White_Space__c.Whitespace_Cell_Count__c</summarizedField>
    <summaryForeignKey>White_Space__c.Account_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>