default/objects/Account_Plan__c/validationRules/Account_required_for_Account_Plan.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_required_for_Account_Plan</fullName>
    <active>true</active>
    <description>If the Record Type is Account Plan, then the Account lookup is required.</description>
    <errorConditionFormula>AND(
   RecordType.DeveloperName = &apos;Account_Plan&apos;,
   ISBLANK( Account__c )
)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Account field is required.</errorMessage>
</ValidationRule>