default/objects/Account_Plan__c/validationRules/SummaryMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>SummaryMandatory</fullName>
    <active>false</active>
    <errorConditionFormula>Summary__c  = &apos;&apos;</errorConditionFormula>
    <errorMessage>Summary Blank</errorMessage>
</ValidationRule>