default/objects/Account_Plan__c/listViews/My_Account_Plans.listView-meta.xml
<ListView>
    <fullName>My_Account_Plans</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Goal__c</columns>
    <columns>Account__c</columns>
    <columns>Account_Plan_Score__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Account Plans</label>
</ListView>